--- a/CombatRework/CombatRework.csproj
+++ b/CombatRework/CombatRework.csproj
@@ -13,13 +13,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="BepInEx.Analyzers" Version="1.0.*">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="BepInEx.Core" Version="5.4.19" />
-    <PackageReference Include="RiskOfRain2.GameLibs" Version="1.2.1-r.1" />
-    <PackageReference Include="UnityEngine.Modules" Version="2019.4.26" />
+    <PackageReference Include="R2API" Version="*" />
+	<PackageReference Include="BepInEx.Core" Version="5.4.19" />
+	<PackageReference Include="RiskOfRain2.GameLibs" Version="*-*" />
+	<PackageReference Include="UnityEngine.Modules" Version="2019.4.26" />
+	<PackageReference Include="MMHOOK.RoR2" Version="*">
+  <NoWarn>NU1701</NoWarn>
+</PackageReference>
   </ItemGroup>
 
   <ItemGroup>
@@ -57,21 +57,12 @@
       <HintPath>libs\ProBuilderMeshOps.dll</HintPath>
       <Private>false</Private>
     </Reference>
-    <Reference Include="R2API.ContentManagement">
-      <HintPath>..\..\..\..\R2API.ContentManagement.dll</HintPath>
-    </Reference>
-    <Reference Include="R2API.DamageType">
-      <HintPath>..\..\..\..\R2API.DamageType.dll</HintPath>
-    </Reference>
-    <Reference Include="R2API.Language">
-      <HintPath>..\..\..\..\R2API.Language.dll</HintPath>
-    </Reference>
-    <Reference Include="R2API.RecalculateStats">
-      <HintPath>..\..\..\..\R2API.RecalculateStats.dll</HintPath>
-    </Reference>
     <Reference Include="Rewired_Windows_Lib">
       <HintPath>libs\Rewired_Windows_Lib.dll</HintPath>
       <Private>false</Private>
+    </Reference>
+    <Reference Include="RiskOfOptions">
+      <HintPath>..\..\..\..\..\RiskOfOptions.dll</HintPath>
     </Reference>
     <Reference Include="SimpleJSON">
       <HintPath>libs\SimpleJSON.dll</HintPath>
